--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </head>
 <body>
     <div class="background">
-        <img src="https://i.imgur.com/XuHdhzL.png" alt="Aviator Win" class="image">
+        <img src="aviator.jpg" alt="Aviator Win" class="image">
         <h1>🎉 ¡Conviértete en el próximo ganador de Aviator!</h1>
         <p>Miles de personas ya están ganando dinero con Aviator.  
         Tú también puedes hacerlo. ¡Es fácil y rápido!</p>
