--- a/index.html
+++ b/index.html
@@ -1,73 +1,49 @@
 
 <!DOCTYPE html>
-<html lang="es">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aviator Colombia</title>
+    <title>Казино бонус 1win</title>
     <style>
-        body, html {
+        body {
             margin: 0;
-            padding: 0;
-            font-family: "Arial", sans-serif;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .background {
-            background: linear-gradient(-45deg, #ff416c, #ff4b2b, #1d2b64, #f8cdda);
-            background-size: 400% 400%;
-            animation: gradientBG 10s ease infinite;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
+            font-family: Arial, sans-serif;
+            background-color: #000;
             color: white;
             text-align: center;
+        }
+        .container {
             padding: 20px;
         }
-
-        @keyframes gradientBG {
-            0% {background-position: 0% 50%;}
-            50% {background-position: 100% 50%;}
-            100% {background-position: 0% 50%;}
+        .promo-img {
+            width: 100%;
+            max-width: 500px;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.5);
         }
-
-        .cta-button {
-            margin-top: 30px;
+        .button {
+            margin-top: 25px;
             padding: 15px 30px;
-            font-size: 20px;
+            font-size: 18px;
             background-color: #00c851;
             color: white;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
             text-decoration: none;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+            border-radius: 8px;
+            display: inline-block;
             transition: background 0.3s ease;
         }
-
-        .cta-button:hover {
+        .button:hover {
             background-color: #007e33;
-        }
-
-        .image {
-            max-width: 300px;
-            margin-bottom: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
         }
     </style>
 </head>
 <body>
-    <div class="background">
-        <img src="aviator.jpg" alt="Aviator Win" class="image">
-        <h1>🎉 ¡Conviértete en el próximo ganador de Aviator!</h1>
-        <p>Miles de personas ya están ganando dinero con Aviator.  
-        Tú también puedes hacerlo. ¡Es fácil y rápido!</p>
-        <p>✅ ¡Regístrate y recibe un bono de 150% hoy!</p>
-        <a class="cta-button" href="https://t.me/GanaenAviador" target="_blank">ÚNETE AL CANAL</a>
+    <div class="container">
+        <img class="promo-img" src="GROSHI2025.jpg" alt="Бонус 500%">
+        <h2>🎁 Активуй бонус до 500% та фріспіни!</h2>
+        <p>Реєструйся, поповнюй рахунок та грай в улюблені слоти з бонусами!</p>
+        <a href="https://t.me/GanaenAviador" class="button" target="_blank">🔗 Перейти в Telegram</a>
     </div>
 </body>
 </html>
